:bug: Change height to min-height to avoid cutting off content

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
 #wrapper {
-  height: 100vh;
   justify-content: center;
+  min-height: 100vh;
 }
